--- a/html/login.html
+++ b/html/login.html
@@ -62,13 +62,13 @@
                    
                     <div>Hoặc đăng nhập bằng</div>
 
-                    <a href="#" id="googleIcon" class="flex">
+                    <a href="https://www.google.com/intl/en-US/gmail/about/" target="_blank" id="googleIcon" class="flex">
                         <i class="fa-brands fa-google"></i>
                         <div> Google</div>
 
                     </a>
 
-                    <a href="#" id="facebookIcon" class="flex">
+                    <a href="https://www.facebook.com/" target="_blank" id="facebookIcon" class="flex">
                         <i class="fa-brands fa-facebook"></i>
                         <div> Facebook</div>
 
